# ble-async-demo

./: Cargo.toml  LICENSE  README.md  build.rs  memory.x  microbit_v2_memory.x  nrf52840dk_memory.x  nrf52dk_memory.x
.cargo/: config.toml
src/lib/: button_handler.rs  led_handler.rs  message.rs  mod.rs  uart_rx_handler.rs
src/lib/ble/: mod.rs  sd.rs  server.rs  services.rs
src/lib/device/: microbit.rs  mod.rs  nrf52840dk.rs  nrf52dk.rs
tests/: integration.rs
