[package]
authors = ["Kentaro Okuda <lonesometraveler@mac.com>"]
name = "ble-async-demo"
edition = "2021"
version = "0.1.0"

[lib]
harness = false
path = "src/lib/mod.rs"

# needed for each integration test
[[test]]
name = "integration"
harness = false

[features]
default = ["microbit-v2"]
nrf52dk = ["embassy-nrf/nrf52832", "nrf-softdevice/nrf52832", "nrf-softdevice/s132"]
microbit-v2 = ["embassy-nrf/nrf52833", "nrf-softdevice/nrf52833", "nrf-softdevice/s140", "embassy-time/tick-hz-32_768"]
nrf52840dk = ["embassy-nrf/nrf52840", "nrf-softdevice/nrf52840", "nrf-softdevice/s140", "embassy-time/tick-hz-32_768"]

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-executor = { version = "0.1.1", features = ["nightly", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["nightly", "defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.1.0", features = ["nightly", "defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", features = ["nightly", "time-driver-rtc1", "defmt", "gpiote", "unstable-traits"] }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice", features = ["defmt", "ble-gatt-server", "ble-peripheral", "critical-section-impl"] }
futures = { version = "0.3.5", default-features = false }
heapless = { version = "0.7.16", features = ["defmt-impl"] }
static_cell = "1.0.0"

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
