[package]
authors = ["Kentaro Okuda <lonesometraveler@mac.com>"]
name = "ble-async-demo"
edition = "2021"
version = "0.1.0"

[lib]
harness = false
path = "src/lib/mod.rs"

# needed for each integration test
[[test]]
name = "integration"
harness = false

[features]
default = ["nrf52840dk"]
nrf52dk = [
    "embassy-nrf/nrf52832",
    "nrf-softdevice/nrf52832",
    "nrf-softdevice/s132",
]
microbit-v2 = [
    "embassy-nrf/nrf52833",
    "nrf-softdevice/nrf52833",
    "nrf-softdevice/s140",
]
nrf52840dk = [
    "embassy-nrf/nrf52840",
    "nrf-softdevice/nrf52840",
    "nrf-softdevice/s140",
]

[dependencies]
embassy-executor = { version = "*", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "*", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "*" }
embassy-nrf = { version = "*", features = [
    "defmt",
    "gpiote",
    "time-driver-rtc1",
] }
embassy-futures = { version = "*" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice", features = [
    "defmt",
    "ble-peripheral",
    "ble-gatt-server",
    "critical-section-impl",
] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
futures = { version = "0.3.29", default-features = false }
heapless = { version = "0.8", features = ["defmt-03"] }
static_cell = "2.0.0"

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

[patch.crates-io]
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "85d5f42562ca9374e3200d652616af9533346c5e" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "85d5f42562ca9374e3200d652616af9533346c5e" }
embassy-macros = { git = "https://github.com/embassy-rs/embassy", rev = "85d5f42562ca9374e3200d652616af9533346c5e" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "85d5f42562ca9374e3200d652616af9533346c5e" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "85d5f42562ca9374e3200d652616af9533346c5e" }
